# nr-vocabularies

./: README.md  build.sh  generate.sh  nr-vocabulary-model.yaml  pyproject.toml  setup.cfg
.github/workflows/: push.yaml
example/: README.rst  setup.cfg
example/example/: config.py  ext.py  proxies.py  views.py
example/example/records/: api.py  dumper.py  models.py
example/example/records/jsonschemas/: example-1.0.0.json
example/example/records/mappings/v7/example/: example-1.0.0.json
example/example/resources/: config.py  resource.py
example/example/services/: config.py  facets.py  permissions.py  schema.py  search.py  service.py
models/: nr-vocabularies-model.yaml  nr-vocabularies.yaml  nr-vocabulary-model.yaml
nr-vocabularies-model-builder/: setup.cfg  version.py
nr-vocabularies-model-builder/nr_vocabularies_model_builder/models/: nr-vocabularies.yaml
nr-vocabularies/nr_vocabularies/records/jsonschemas/: nr-vocabularies-1.0.0.json
nr-vocabularies/nr_vocabularies/records/mappings/v7/nr_vocabularies/: nr-vocabularies-1.0.0.json
nr_vocabularies/fixtures/: funders.yaml  institutions.yaml  item-relation-types.yaml  resource-types.yaml
nr_vocabularies/records/: api.py
nr_vocabularies/services/: config.py  schema.py
tests/: conftest.py  example-model.yaml  test_import_export.py  test_load_vocabularies.py
