[build-system]
requires = ["setuptools", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "nr-vocabularies"
version = "1.0.0.dev1"
description = "A sample application for nr_vocabularies"
authors = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.plugins.'invenio_base.api_apps']
nr_vocabularies = "nr_vocabularies.ext:NrVocabulariesExt"

[tool.poetry.dependencies.invenio]
version = "^3.5.0a3"
extras = ["base", "auth", "metadata", "files", "postgresql", "elasticsearch7"]
optional = true
allow-prereleases = true

[tool.poetry.dependencies.pyyaml]
version = ">=6"
optional = true

[tool.poetry.dependencies.invenio-rest]
version = "^1.2.8"
optional = true
allow-prereleases = true

[tool.poetry.dependencies.invenio-records-resources]
version = "^0.18.3"
optional = true
allow-prereleases = true

[tool.poetry.extras]
sample-app = ["invenio", "invenio-records-resources", "pyyaml"]

[tool.poetry.plugins.'invenio_db.alembic']
nr_vocabularies = "nr_vocabularies:alembic"

[tool.poetry.plugins.'invenio_db.models']
nr_vocabularies = "nr_vocabularies.records.models"

[tool.poetry.plugins.'invenio_base.api_blueprints']
NrVocabularies = "nr_vocabularies.views:create_blueprint_from_app"

[tool.poetry.plugins.'invenio_search.mappings']
nr_vocabularies = "nr_vocabularies.records.mappings"

[tool.poetry.plugins.'invenio_jsonschemas.schemas']
nr_vocabularies = "nr_vocabularies.records.jsonschemas"
